--- a/shaneel.html
+++ b/shaneel.html
@@ -73,9 +73,9 @@
     <div class="clearfix">
       <div class="column menu">
         <ul>
-          <li>The Flight</li>
-          <li>The City</li>
-          <li>The Island</li>
+          <li>Enver Creek Home page</li>
+          <li>Teams and clubs</li>
+          <li>Departments</li>
         </ul>
       </div>
 
