--- a/shaneel.html
+++ b/shaneel.html
@@ -80,7 +80,7 @@
       </div>
 
       <div class="column content">
-        <h1>The City</h1>
+        <h1>Welcome to Enver Creek</h1>
         <p>Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
         <p>You will learn more about web layout and responsive web pages in a later chapter.</p>
       </div>
