--- a/shaneel.html
+++ b/shaneel.html
@@ -53,12 +53,13 @@
         margin-bottom: 8px;
         background-color: #7c0229;
         color: #ffffff;
-        border: 3px solid#DAA520;
+        border: 3px solid #DAA520;
         border-style: double;
       }
       
       .menu li:hover {
-        background-color: #0099cc;
+        background-color: #DAA520;
+        font-size: 115%;
       }
 
     </style>
