--- a/shaneel.html
+++ b/shaneel.html
@@ -66,7 +66,6 @@
   </head>
 
   <body>
-
     <div class="header">
       <h1>Enver Creek Secondary School</h1>
     </div>
@@ -82,8 +81,19 @@
 
       <div class="column content">
         <h1>Welcome to Enver Creek</h1>
-        <p>Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the old town and the modern city.</p>
-        <p>You will learn more about web layout and responsive web pages in a later chapter.</p>
+        <p>Enver Creek Secondary School is school that teaches courses
+         like the regular academics, applied skills classes and sports
+        along with fine arts. A notable graduate is Matthews jarvis
+        who now is a poker player with his skills in math.<br>
+        
+<br>School District 36 (Surrey)
+<br>14505-84 Avenue 
+<br>Surrey, B.C. V3S 8X2
+<br>Tel:  604-543-8149
+<br>Fax: 604-543-9762</p>
+ <img 
+ src="https://www.surreyschools.ca/schools/envercreek/Style%20Library/Images/114.jpg"/>
+
       </div>
     </div>
 
@@ -94,3 +104,4 @@
   </body>
 
 </html>
+
