--- a/shaneel.html
+++ b/shaneel.html
@@ -25,6 +25,7 @@
         padding: 15px;
         border: 5px solid #DAA520;
         border-style: double;
+        align:center;
       }
       
       .column {
@@ -72,7 +73,7 @@
 
   <body>
     <div class="header">
-      <h1>Enver Creek Secondary School</h1>
+      <h1> <center>Enver Creek Secondary School</center></h1>
     </div>
 
     <div class="clearfix">
@@ -102,7 +103,7 @@
     </div>
 
     <div class="footer">
-      <p>Shaneel Prasad</p>
+      <p><center>Shaneel Prasad</center></p>
     </div>
     <link rel="stylesheet" type="text/css" <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
   </body>
