--- a/shaneel.html
+++ b/shaneel.html
@@ -25,7 +25,7 @@
         padding: 15px;
         border: 5px solid #DAA520;
         border-style: double;
-        align:center;
+        align: center;
       }
       
       .column {
@@ -79,7 +79,7 @@
     <div class="clearfix">
       <div class="column menu">
         <ul>
-          <li>Enver Creek Home page</li>
+          <li><a href="https://prasadshaneel.github.io/shaneel.html">Enver Creek Home page</a></li>
           <li>Teams and clubs</li>
           <li>Departments</li>
         </ul>
@@ -103,10 +103,11 @@
     </div>
 
     <div class="footer">
-      <p><center>Shaneel Prasad</center></p>
+      <p>
+        <center>Shaneel Prasad</center>
+      </p>
     </div>
     <link rel="stylesheet" type="text/css" <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
   </body>
 
 </html>
-
