--- a/clubsandteams.html
+++ b/clubsandteams.html
@@ -119,9 +119,9 @@ height:30%;
 
 </div>
           <div class="article">
-  <h1></h1>
-   <img  src="">
-  <p></p>
+  <h1>Weight Training</h1>
+   <img  src="http://cdnak1.psbin.com/img/mw=390/mh=250/cr=n/d=v5tal/0auungx4bmn0z0ym.jpg">
+  <p>The Weight Training club is a club for people<br> who want to exercise more. Mr Sujan runs the club in the weight room.</p>
 </div>
 
       </div>
