--- a/main.html
+++ b/main.html
@@ -85,11 +85,13 @@
     <div class="clearfix">
       <div class="column menu">
         <ul>
-          <li id="link">
+          <li>
             <a href="https://prasadshaneel.github.io/shaneel.html">Enver Creek Home page</a>
           </li>
-          <li>Teams and clubs</li>
-          <li>Departments</li>
+          <li><a href="https://prasadshaneel.github.io/clubsandteams.html">Teams and clubs</a>
+          </li>
+          
+          <li><a href="https://https://prasadshaneel.github.io/Departments.html">Departments</a></li>
         </ul>
       </div>
 
