--- a/Departments.html
+++ b/Departments.html
@@ -88,26 +88,24 @@
         float: right;
         width: 30%;
         height: 30%;
-
     </style>
   </head>
-
   <body>
     <div class="header">
       <h1> <center>Enver Creek Secondary School</center></h1>
     </div>
-
     <div class="clearfix">
       <div class="column menu">
         <ul>
-          <li id="link">
+          <li>
             <a href="https://prasadshaneel.github.io/shaneel.html">Enver Creek Home page</a>
           </li>
-          <li>Teams and clubs</li>
-          <li>Departments</li>
+          <li><a href="https://prasadshaneel.github.io/clubsandteams.html">Teams and clubs</a>
+          </li>
+          
+          <li><a href="https://https://prasadshaneel.github.io/Departments.html">Departments</a></li>
         </ul>
       </div>
-
       <div class="column content">
         <h1>Welcome to Departments</h1>
         <div class="article">
@@ -121,7 +119,6 @@
           <img src="https://www.surreyschools.ca/schools/envercreek/PublishingImages/Languages.jpg">
           <p>Language courses are courses for people who want to
             <br> expand there knowledge on other languages and also learn other cultures from those languages.</p>
-
         </div>
         <div class="article">
           <h1>Culinary Arts</h1>
@@ -129,10 +126,8 @@
           <p>Culinary Arts is for students who want to learn how to cook
             <br> all sorts of food and learn about cuisine from all over the world. Learn to cook amazing meals for yourself and others. </p>
         </div>
-
       </div>
     </div>
-
     <div class="footer">
       <p>
         <center>Shaneel Prasad</center>
@@ -140,5 +135,4 @@
     </div>
     <link rel="stylesheet" type="text/css" <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
   </body>
-
 </html>
