--- a/clubsandteams.html
+++ b/clubsandteams.html
@@ -88,23 +88,22 @@ float: right;
 height:30%;
     </style>
   </head>
-
   <body>
     <div class="header">
       <h1> <center>Enver Creek Secondary School</center></h1>
     </div>
-
     <div class="clearfix">
       <div class="column menu">
         <ul>
-          <li id="link">
+          <li>
             <a href="https://prasadshaneel.github.io/shaneel.html">Enver Creek Home page</a>
           </li>
-          <li>Teams and clubs</li>
-          <li>Departments</li>
+          <li><a href="https://prasadshaneel.github.io/clubsandteams.html">Teams and clubs</a>
+          </li>
+          
+          <li><a href="https://https://prasadshaneel.github.io/Departments.html">Departments</a></li>
         </ul>
       </div>
-
       <div class="column content">
         <h1>Welcome to Teams and Clubs</h1>
         <div class="article">
@@ -116,17 +115,14 @@ height:30%;
   <h1>Robotics</h1>
    <img  src="https://www.surreyschools.ca/schools/envercreek/Extra-curricular/Clubs/Documents/robotics.jpg">
   <p>Mr.Heradia is the leading teacher for Robotics<br> and has an amense knowledge for the craft and his team has gone to the championships before.</p>
-
 </div>
           <div class="article">
   <h1>Weight Training</h1>
    <img  src="http://cdnak1.psbin.com/img/mw=390/mh=250/cr=n/d=v5tal/0auungx4bmn0z0ym.jpg">
   <p>The Weight Training club is a club for people<br> who want to exercise more. Mr Sujan runs the club in the weight room.</p>
 </div>
-
       </div>
       </div>
-
     <div class="footer">
       <p>
         <center>Shaneel Prasad</center>
@@ -134,5 +130,4 @@ height:30%;
     </div>
     <link rel="stylesheet" type="text/css" <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
   </body>
-
 </html>
