--- a/clubsandteams.html
+++ b/clubsandteams.html
@@ -96,7 +96,7 @@ height:30%;
       <div class="column menu">
         <ul>
           <li>
-            <a href="https://prasadshaneel.github.io/shaneel.html">Enver Creek Home page</a>
+            <a href="https://prasadshaneel.github.io/main.html">Enver Creek Home page</a>
           </li>
           <li><a href="https://prasadshaneel.github.io/clubsandteams.html">Teams and clubs</a>
           </li>
