--- a/main.html
+++ b/main.html
@@ -90,7 +90,7 @@
           <li><a href="https://prasadshaneel.github.io/clubsandteams.html">Teams and clubs</a>
           </li>
           
-          <li><a href="https://https://prasadshaneel.github.io/Departments.html">Departments</a></li>
+          <li><a href="https://https://prasadshaneel.github.io/departments.html">Departments</a></li>
         </ul>
       </div>
 
