--- a/clubsandteams.html
+++ b/clubsandteams.html
@@ -101,7 +101,7 @@ height:30%;
           <li><a href="https://prasadshaneel.github.io/clubsandteams.html">Teams and clubs</a>
           </li>
           
-          <li><a href="https://https://prasadshaneel.github.io/departments.html">Departments</a></li>
+          <li><a href="https://prasadshaneel.github.io/departments.html">Departments</a></li>
         </ul>
       </div>
       <div class="column content">
