--- a/house.html
+++ b/house.html
@@ -67,7 +67,7 @@
       <ul>
         <li><a href="prasadshaneel.github.io/house.html">Home</a></li>
         <li><a href="prasadshaneel.github.io/menu.html">News</a></li>
-        <li><a href="prasadshaneel.github.io/locations.html">Contact</a></li>
+        <li><a href="prasadshaneel.github.io/locations.html">locations</a></li>
       </ul>
 
       <div>
