--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,6 @@ html {
 body {
 	color: white;
 }
-
     
     #t1 {
       font-size: 40px;
@@ -55,15 +54,14 @@ body {
     font-size:70px;
     text-align:center;
     }
-
   </style>
 
   <body>
     <div>
       <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#news">News</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="prasadshaneel.github.io/house.html">Home</a></li>
+        <li><a href="prasadshaneel.github.io/menu.html">News</a></li>
+        <li><a href="prasadshaneel.github.io/locations.html">Locations</a></li>
       </ul>
 
       <div>
