--- a/house.html
+++ b/house.html
@@ -50,7 +50,7 @@
     
     #times1 {
       font-family: "Raleway", sans-serif;
-      font-size: 30px;
+      font-size: 20px;
       padding: 20px;
       text-align: right;
     }
@@ -58,6 +58,9 @@
     #t2 {
       font-size: 40px;
       text-align: center;
+    }
+    #t3{
+    text-align:center;
     }
 
   </style>
@@ -80,13 +83,16 @@
         </p>
         <p id=t2>Make Friends and Food</p>
       </div>
+      <div id=t3>
+			<br>
+      		<br>
+      <p>Vancity Social house is a place for people to eat good food and socialize with others.<br>I made this restaurant as a place for not just good food, it make people less lazy and more <br>friendly as they cook their own meal and socialize and for people who dont know what to<br> make we have meal to chose from but to give the incentive to cook for them selves we charge alot.<br> I think this restaurant is the best in all of Vancouver, even if the locations are all bunched up together.<br> the buildings together is just if people see other people they dont like, they can just eat in the other buildings.
+      </p>
+      </div>
       <div id=times1>
         <p>
           <br>
           <br>
-          <br>
-          <br>
-
           <br> Monday - Friday 10am - 7pm|<br>Saturday 1pm - 7pm|</p>
       </div>
     </div>
