--- a/menu.html
+++ b/menu.html
@@ -78,7 +78,7 @@
     <div>
       <ul>
         <li><a href="prasadshaneel.github.io/house.html">Home</a></li>
-        <li><a href="prasadshaneel.github.io/menu.html">News</a></li>
+        <li><a href="prasadshaneel.github.io/menu.html">menu</a></li>
         <li><a href="prasadshaneel.github.io/locations.html">Locations</a></li>
       </ul>
 
