--- a/locations.html
+++ b/locations.html
@@ -84,6 +84,9 @@
         font-size: 40px;
         text-align: center;
       }
+            h2 {
+        font-family: raleway;
+      }
 <!DOCTYPE html>
 <html>
   <title>Vancity Social House</title>
